@@ -335,7 +335,7 @@ OSes, or those that can't boot from a GPT disk, to access up to three of
 the partitions on the disk by creating MBR entries for them. Note that
 these hybrid MBR entries can easily go out of sync with the GPT entries,
 particularly when hybrid\-unaware GPT utilities are used to edit the disk.
-Thus, you may need to recreate the hybrid MBR if you use such tools. Unlike
+Thus, you may need to re\-create the hybrid MBR if you use such tools. Unlike
 the 'g' option, this option does not support converting any partitions into
 MBR logical partitions.
 
